# YD2SG

./: LICENSE  README.md  pyproject.toml
src/YD2SG/: YD2SG.py  __init__.py  __main__.py  check_input.py  print_utils.py  pyproject.toml  timestamping.py
src/YD2SG/templates/: schedule_template.j2
