[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "YD2SG"
version = "0.0.1"
authors = [
  { name="Ylaan", email="watsoncholmes@gmail.com" },
]
description = "Ylaan's Discord Streaming Schedule Generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime",
    "jinja2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
keywords = ["Ylaan", "Schedule", "Discord", "Template"]


[project.scripts]
spam-cli = "spam:YD2SG"


[project.urls]
Homepage = "https://github.com/Ylaaan/YD2SG"
Issues = "https://github.com/Ylaaan/YD2SG/issues"